.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:45:22 **** Incremental Build of configuration Release for project Assignment5 ****
make all 
Building file: ../src/Assignment5.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment5.d" -MT"src/Assignment5.o" -o "src/Assignment5.o" "../src/Assignment5.cpp"
Finished building: ../src/Assignment5.cpp
 
Building target: Assignment5
Invoking: GCC C++ Linker
g++  -o "Assignment5"  ./src/Assignment5.o   
Finished building target: Assignment5
 
11:46:23 **** Incremental Build of configuration Release for project Assignment5 ****
make all 
make: Nothing to be done for 'all'.
11:46:27 **** Incremental Build of configuration Release for project Assignment5 ****
make all 
make: Nothing to be done for 'all'.
11:46:39 **** Incremental Build of configuration Release for project Assignment5 ****
make all 
make: Nothing to be done for 'all'.
11:46:59 **** Incremental Build of configuration Debug for project Assignment5 ****
make all 
make: Nothing to be done for 'all'.
11:47:08 **** Incremental Build of configuration Debug for project Assignment5 ****
make all 
make: Nothing to be done for 'all'.
11:47:16 **** Incremental Build of configuration Debug for project Assignment5 ****
make all 
make: Nothing to be done for 'all'.
11:52:54 **** Incremental Build of configuration Release for project Assignment5 ****
make all 
Building file: ../src/Assignment5.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment5.d" -MT"src/Assignment5.o" -o "src/Assignment5.o" "../src/Assignment5.cpp"
Finished building: ../src/Assignment5.cpp
 
Building target: Assignment5
Invoking: GCC C++ Linker
g++  -o "Assignment5"  ./src/Assignment5.o   
Finished building target: Assignment5
 
11:53:12 **** Incremental Build of configuration Release for project Assignment5 ****
make all 
make: Nothing to be done for 'all'.
12:09:32 **** Incremental Build of configuration Release for project Assignment5 ****
make all 
Building file: ../src/BST_IMP.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BST_IMP.d" -MT"src/BST_IMP.o" -o "src/BST_IMP.o" "../src/BST_IMP.cpp"
In file included from ../src/BST_IMP.cpp:8:0:
../src/BST_ADT.h:20:15: error: template argument required for ‘class BST’
  friend class BST;
               ^~~
../src/BST_ADT.h:20:2: error: friend declaration does not name a class or function
  friend class BST;
  ^~~~~~
../src/BST_IMP.cpp: In constructor ‘Node<T>::Node()’:
../src/BST_IMP.cpp:12:2: error: ‘lchi’ was not declared in this scope
  lchi
  ^~~~
../src/BST_IMP.cpp:12:2: note: suggested alternative: ‘lchild’
  lchi
  ^~~~
  lchild
make: *** [src/BST_IMP.o] Error 1
src/subdir.mk:21: recipe for target 'src/BST_IMP.o' failed
12:09:59 **** Incremental Build of configuration Release for project Assignment5 ****
make all 
Building file: ../src/BST_IMP.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BST_IMP.d" -MT"src/BST_IMP.o" -o "src/BST_IMP.o" "../src/BST_IMP.cpp"
In file included from ../src/BST_IMP.cpp:8:0:
../src/BST_ADT.h:20:15: error: template argument required for ‘class BST’
  friend class BST;
               ^~~
../src/BST_ADT.h:20:2: error: friend declaration does not name a class or function
  friend class BST;
  ^~~~~~
src/subdir.mk:21: recipe for target 'src/BST_IMP.o' failed
make: *** [src/BST_IMP.o] Error 1
12:10:59 **** Incremental Build of configuration Release for project Assignment5 ****
make all 
Building file: ../src/BST_IMP.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BST_IMP.d" -MT"src/BST_IMP.o" -o "src/BST_IMP.o" "../src/BST_IMP.cpp"
In file included from ../src/BST_IMP.cpp:8:0:
../src/BST_ADT.h:20:15: error: template argument required for ‘class BST’
  friend class BST;
               ^~~
../src/BST_ADT.h:20:2: error: friend declaration does not name a class or function
  friend class BST;
  ^~~~~~
src/subdir.mk:21: recipe for target 'src/BST_IMP.o' failed
make: *** [src/BST_IMP.o] Error 1
12:11:08 **** Incremental Build of configuration Release for project Assignment5 ****
make all 
Building file: ../src/BST_IMP.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BST_IMP.d" -MT"src/BST_IMP.o" -o "src/BST_IMP.o" "../src/BST_IMP.cpp"
Finished building: ../src/BST_IMP.cpp
 
Building target: Assignment5
Invoking: GCC C++ Linker
g++  -o "Assignment5"  ./src/Assignment5.o ./src/BST_IMP.o   
Finished building target: Assignment5
 
12:19:03 **** Incremental Build of configuration Release for project Assignment5 ****
make all 
Building file: ../src/BST_IMP.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BST_IMP.d" -MT"src/BST_IMP.o" -o "src/BST_IMP.o" "../src/BST_IMP.cpp"
../src/BST_IMP.cpp:25:34: error: ISO C++ forbids declaration of ‘mirror_fun’ with no type [-fpermissive]
 Node<T>::mirror_fun(Node<T>* node){
                                  ^
../src/BST_IMP.cpp:25:1: error: prototype for ‘int Node<T>::mirror_fun(Node<T>*)’ does not match any in class ‘Node<T>’
 Node<T>::mirror_fun(Node<T>* node){
 ^~~~~~~
In file included from ../src/BST_IMP.cpp:8:0:
../src/BST_ADT.h:23:11: error: candidate is: Node<T>* Node<T>::mirror_fun(Node<T>*)
  Node<T>* mirror_fun(Node* node);
           ^~~~~~~~~~
src/subdir.mk:21: recipe for target 'src/BST_IMP.o' failed
make: *** [src/BST_IMP.o] Error 1
12:24:03 **** Incremental Build of configuration Release for project Assignment5 ****
make all 
Building file: ../src/BST_IMP.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BST_IMP.d" -MT"src/BST_IMP.o" -o "src/BST_IMP.o" "../src/BST_IMP.cpp"
../src/BST_IMP.cpp:25:34: error: ISO C++ forbids declaration of ‘mirror_fun’ with no type [-fpermissive]
 Node<T>::mirror_fun(Node<T>* node){
                                  ^
../src/BST_IMP.cpp:25:1: error: prototype for ‘int Node<T>::mirror_fun(Node<T>*)’ does not match any in class ‘Node<T>’
 Node<T>::mirror_fun(Node<T>* node){
 ^~~~~~~
In file included from ../src/BST_IMP.cpp:8:0:
../src/BST_ADT.h:23:11: error: candidate is: Node<T>* Node<T>::mirror_fun(Node<T>*)
  Node<T>* mirror_fun(Node* node);
           ^~~~~~~~~~
src/subdir.mk:21: recipe for target 'src/BST_IMP.o' failed
make: *** [src/BST_IMP.o] Error 1
12:24:21 **** Incremental Build of configuration Release for project Assignment5 ****
make all 
Building file: ../src/BST_IMP.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BST_IMP.d" -MT"src/BST_IMP.o" -o "src/BST_IMP.o" "../src/BST_IMP.cpp"
../src/BST_IMP.cpp:25:34: error: ISO C++ forbids declaration of ‘mirror_fun’ with no type [-fpermissive]
 Node<T>::mirror_fun(Node<T>* node){
                                  ^
../src/BST_IMP.cpp:25:1: error: prototype for ‘int Node<T>::mirror_fun(Node<T>*)’ does not match any in class ‘Node<T>’
 Node<T>::mirror_fun(Node<T>* node){
 ^~~~~~~
In file included from ../src/BST_IMP.cpp:8:0:
../src/BST_ADT.h:23:11: error: candidate is: Node<T>* Node<T>::mirror_fun(Node<T>*)
  Node<T>* mirror_fun(Node<T>* node);
           ^~~~~~~~~~
src/subdir.mk:21: recipe for target 'src/BST_IMP.o' failed
make: *** [src/BST_IMP.o] Error 1
12:24:31 **** Incremental Build of configuration Release for project Assignment5 ****
make all 
Building file: ../src/BST_IMP.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/BST_IMP.d" -MT"src/BST_IMP.o" -o "src/BST_IMP.o" "../src/BST_IMP.cpp"
Finished building: ../src/BST_IMP.cpp
 
Building target: Assignment5
Invoking: GCC C++ Linker
g++  -o "Assignment5"  ./src/Assignment5.o ./src/BST_IMP.o   
Finished building target: Assignment5
 
12:45:00 **** Incremental Build of configuration Release for project Assignment3 ****
make all 
Building file: ../src/Assignment3.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment3.d" -MT"src/Assignment3.o" -o "src/Assignment3.o" "../src/Assignment3.cpp"
../src/Assignment3.cpp: In function ‘int main()’:
../src/Assignment3.cpp:38:36: error: cannot convert ‘node<int>*’ to ‘bin_tree<int>*’ in initialization
    bin_tree<int>* cp = b.call_copy();
                                    ^
src/subdir.mk:21: recipe for target 'src/Assignment3.o' failed
make: *** [src/Assignment3.o] Error 1
